# trabas

./: .gitignore  AUTHORS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  build_ci.yml  build_release.yml  ci.yml  release.yml  rust.yml  test.yml  test_ci.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: config.rs  lib.rs  version.rs
client/src/data/repository/: mod.rs  underlying_repo.rs
client/src/handler/: main_handler.rs
client/src/service/: mod.rs  underlying_service.rs
common/: Cargo.toml
common/src/: config.rs  convert.rs  lib.rs  log.rs  logger.rs  net.rs  security.rs  string.rs  types.rs  version.rs
common/src/data/dto/: cache.rs  cache_config.rs  mod.rs  public_request.rs  public_response.rs  tunnel_ack.rs  tunnel_client.rs
common/src/macros/: convert.rs  http.rs  mod.rs  security.rs
common/tests/: test_config.rs  test_convert.rs  test_logger.rs  test_net.rs  test_security.rs  test_serialization.rs
doc/: CLI.md  CONFIG.md  SETUP_SERVER.md
doc/site/: book.toml
doc/site/src/: README.md  SUMMARY.md
doc/site/src/reference_guide/cli/: README.md  client.md  client_serve.md  client_set_config.md  common.md  common_global_config.md  common_version.md  server.md  server_cache_config.md  server_run.md  server_set_config.md  server_ssl_config.md
doc/site/src/reference_guide/configuration/: README.md  client.md  global.md  server.md
doc/site/src/user_guide/: installation.md
doc/site/src/user_guide/tunnel_setup/: README.md  basic_setup.md  tls_setup.md
doc/site/theme/: head.hbs  header.hbs
docker/server/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/server/client_connection_with_nginx/: docker-compose.yml
docker/server/client_connection_with_nginx/ssl/: server.key
docker/server/direct/with_redis/: Dockerfile  entrypoint.sh
docker/server/direct/without_redis/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh
docker/server/serve_tls_with_nginx/: docker-compose.yml  nginx.conf
docker/server/with_proxy/nginx_config/: nginx.conf
docker/server/with_proxy/without_redis/: .gitignore  docker-compose.yml
docker/server/with_redis/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/server/without_redis/: Dockerfile  docker-compose.yml  entrypoint.sh
example/: .gitignore  docker-compose-redis.yml  mock_underlying_server.py
example/demo_site/: index.html
server/: Cargo.toml
server/src/: config.rs  handler.rs  lib.rs  main.rs  version.rs
server/src/data/: mod.rs
server/src/data/dto/: mod.rs  public_request.rs  tunnel_client.rs
server/src/data/repository/: cache_repo.rs  client_repo.rs  mod.rs  request_repo.rs  response_repo.rs
server/src/data/store/: redis.rs
server/src/handler/: mod.rs  public_handler.rs  tunnel_handler.rs
server/src/service/: cache_service.rs  client_service.rs  mod.rs  public_service.rs
server/src/types/: client.rs
server/tests/mock/: mock_request_repo.rs  mod.rs
src/: lib.rs
src/mocks/: config.rs  mod.rs
src/mocks/client/: mock_underlying_repo.rs  mod.rs
src/mocks/server/: mock_cache_repo.rs  mock_client_repo.rs  mock_request_repo.rs  mock_response_repo.rs  mod.rs
tests/: test_services.rs
tests/e2e/: README.md  cleanup.sh  mock_server.py  run_tests.py  setup.sh
