workspace = { members = [ "cli", "client", "common", "server"] }
[package]
name = "trabas"
version = "0.2.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "client" }
common = { path = "common" }
server = { path = "server" }
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.81"
http = "1.1.0"
reqwest = "0.12.5"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
chrono = "0.4.41"
