[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
common = { path = "../common" }
mac_address = "1.1.7"
rand = "0.8.5"
async-trait = "0.1.81"
log = "0.4.22"
http = "1.1.0"
