[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
httparse = "1.9.4"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
