[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.38.0", features = ["full"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
chrono = "0.4.38"
serde = "1.0.204"
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
http = "1.1.0"
httparse = "1.9.4"
